# masterthesis

./: .gitignore  Cargo.toml  README.md  build.sh  possible_points_percent.js  test.sh  wilcox.py
benches/: main.rs
benches/ai/: mcts.rs  minmax.rs  mod.rs  unsafe_mcts.rs
benches/game_logic/: field.rs  mod.rs  tetromino.rs  transposition.rs
python-rl/: .gitignore  a2c_tuner.py  a2c_tuner_box.py  a2c_tuner_heu.py  acktr_tuner.py  ai.py  custom_env.py  custom_env_boxactions.py  custom_env_heu.py  ddpg_tuner.py  dqn_tuner.py  env_getter.py  gail_tuner.py  generate_pretraindata.py  heuristic_tuner.py  hex_env.py  param_loop.py  play.py  population_ppo.py  ppo2_pretrain_tuner.py  ppo2_tuner.py  ppo2_tuner_box.py  ppo2_tuner_heu.py  pretrain.py  repro.py  rustyblocks.py  searchparams.py  selfplay.py  test.py  tmptrain.py  tournament_player.py  train_a2c.py  train_func.py  train_heu_ppo2.py  train_loop.py  train_lstm.py  train_multi.py  train_ppo2.py  trpo_tuner.py  trpo_tuner_box.py
scripts/: findBestModel.py  heu.py  multiself.py  notFullExp.js  reprodocubilityDataProcessor.py
src/: lib.rs  main.rs
src/ai/: alphabeta.rs  heuristic.rs  minmax.rs  mod.rs  python.rs  random.rs
src/db/: mod.rs
src/game_logic/: cache.rs  log.rs  mod.rs  tetromino.rs  val.rs
src/game_player/: advantage_checker.rs  final_eval.rs  mctsparameval.rs  mod.rs  rating.rs  tournament.rs  transposition_amount.rs
src/heuristics/: mod.rs  tune.rs
src/hex/: heuristic.rs  hex_eval.rs  mod.rs  players.rs  tournament.rs
src/mcts/: bot.rs  mod.rs  rewrite.rs  tree.rs  (+1 more)
tests/: lib.rs
(+101 files in other folders)
