[package]
name = "rustyblocks"
version = "0.1.0"
authors = ["Matthias Müller-Brockhausen <git@mmb2.click>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = {version = "1.0.91", features = ["rc"]}
serde_json = "1.0"
bincode = "1.1.4"
rand = "0.7"
rand_hc = "0.2"
wasm-bindgen = "0.2"
rayon = "1.0"
plotters = "0.2"
num-traits = "0.2"
bbt = "0.2"
reqwest = "0.9"
ndarray = "0.13"
num_cpus = "1"
rusqlite = {version = "0.20", optional = true}
tch = {git = "https://github.com/LaurentMazare/tch-rs.git", optional = true}
random_choice = {version = "0.3", optional = true}

[features]
default = []
rl = ["tch", "random_choice"]
sqlite = ["rusqlite"]

[dev-dependencies]
insta = "0.11"
criterion = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mongodb = "0.4"
bson = "0.14"

[[bench]]
name = "main"
harness = false

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
